--- a/css/main.css
+++ b/css/main.css
@@ -1408,8 +1408,6 @@ a {
             font-size: 16px;
             margin-bottom: 10px; }
   .category {
-    min-width: 760px;
-    max-width: 1100px;
     margin: 0 auto;
     padding-top: 80px; }
     .category h2 {
@@ -1428,6 +1426,8 @@ a {
     .category li {
       list-style: none; }
     .category .category_inner {
+      max-width: 760px;
+      margin: 0 auto;
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
       grid-column-gap: 10px;
@@ -1448,33 +1448,33 @@ a {
         font-size: 14px;
         margin-top: 10px; }
       .category .category_inner li:nth-child(1) {
-        padding-top: 80px;
-        padding-bottom: 80px;
+        padding-top: 60px;
+        padding-bottom: 60px;
         background: linear-gradient(rgba(255, 255, 255, 0.25), rgba(255, 255, 255, 0.25)), url(../img/fashion_bg.jpg);
         background-size: 100%; }
       .category .category_inner li:nth-child(2) {
-        padding-top: 80px;
-        padding-bottom: 80px;
+        padding-top: 60px;
+        padding-bottom: 60px;
         background: linear-gradient(rgba(255, 255, 255, 0.25), rgba(255, 255, 255, 0.25)), url(../img/beatuy_bg.jpg);
         background-size: 100%; }
       .category .category_inner li:nth-child(3) {
-        padding-top: 80px;
-        padding-bottom: 80px;
+        padding-top: 60px;
+        padding-bottom: 60px;
         background: linear-gradient(rgba(255, 255, 255, 0.25), rgba(255, 255, 255, 0.25)), url(../img/lifestyle_bg.jpg);
         background-size: 100%; }
       .category .category_inner li:nth-child(4) {
-        padding-top: 80px;
-        padding-bottom: 80px;
+        padding-top: 60px;
+        padding-bottom: 60px;
         background: linear-gradient(rgba(255, 255, 255, 0.25), rgba(255, 255, 255, 0.25)), url(../img/travel_bg.jpg);
         background-size: 100%; }
       .category .category_inner li:nth-child(5) {
-        padding-top: 80px;
-        padding-bottom: 80px;
+        padding-top: 60px;
+        padding-bottom: 60px;
         background: linear-gradient(rgba(255, 255, 255, 0.25), rgba(255, 255, 255, 0.25)), url(../img/fitness_bg.jpg);
         background-size: 100%; }
       .category .category_inner li:nth-child(6) {
-        padding-top: 80px;
-        padding-bottom: 80px;
+        padding-top: 60px;
+        padding-bottom: 60px;
         background: linear-gradient(rgba(255, 255, 255, 0.25), rgba(255, 255, 255, 0.25)), url(../img/food_bg.jpg);
         background-size: 100%; }
   .cases {
@@ -1641,6 +1641,8 @@ a {
         margin-top: 40px; }
   .strengths_oic, .service, .flow_u, .category, .cases, .form {
     overflow: hidden; }
+  .strengths_oic {
+    position: relative; }
   .strengths_oic::before {
     color: #000;
     content: attr(data-bg-text);
@@ -1651,8 +1653,9 @@ a {
     opacity: 0.05;
     z-index: -1;
     text-align: right;
-    position: relative;
-    left: 150px; }
+    top: 100px;
+    left: 450px;
+    position: absolute; }
   .service::before {
     color: #000;
     content: attr(data-bg-text);
@@ -1664,7 +1667,7 @@ a {
     z-index: -1;
     text-align: right;
     position: relative;
-    top: 180px; }
+    top: 320px; }
   .flow_u::before {
     color: #000;
     content: attr(data-bg-text);
@@ -1676,8 +1679,7 @@ a {
     z-index: -1;
     text-align: right;
     position: relative;
-    top: 180px;
-    right: 200px; }
+    top: 320px; }
   .category::before {
     color: #000;
     content: attr(data-bg-text);
@@ -1689,7 +1691,8 @@ a {
     z-index: -1;
     text-align: right;
     position: relative;
-    top: 200px; }
+    top: 320px;
+    left: 150px; }
   .cases::before {
     color: #000;
     content: attr(data-bg-text);
